@@ -11,9 +11,9 @@ build_requires:
   Test::Shared::Fixture::Wikibase::Datatype::Lexeme::Wikidata::DogCzechNoun: 0.19
   Test::Shared::Fixture::Wikibase::Datatype::Property::Wikidata::InstanceOf: 0.17
   Unicode::UTF8: 0
-  Wikibase::Datatype: 0.03
-  Wikibase::Datatype::Lexeme: 0.19
-  Wikibase::Datatype::Property: 0.12
+  Wikibase::Datatype: 0.25
+  Wikibase::Datatype::Lexeme: 0.25
+  Wikibase::Datatype::Property: 0.25
 configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
@@ -37,7 +37,7 @@ requires:
   List::MoreUtils: 0
   Readonly: 0
   URI: 0
-  Wikibase::Datatype: 0.12
+  Wikibase::Datatype: 0.25
   perl: 5.01
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Wikibase-Datatype-Struct/issues
